# longan_nano_signal_generator

./: CMakeLists.txt  README.md  action.h  pinout.h  signal.cpp  signal.h  signalGenerator.cpp  signalSettings.h
assets/: CMakeLists.txt  assets.cpp  assets.h
assets/pics/: blank_square.krita.kra  convert.sh  sine.kra  square.kra  triangle.kra
